popup.css
html{
	height: 599px;
	max-height: 600px;
}
body{
	max-height:600px; 
	width:400px;
	overflow-y: scroll;
	overflow-x: hidden;
	margin:0px;
}
ul#windows{
	max-height:600px;
	padding-left: 0px;
	margin-left: 0px;
	margin-top: 5px;
	margin-bottom: 0px;
}
li.window{
	text-align: left;
}
ul.tabs{
	text-align: left;
	padding-left: 0px;
	margin-left: 0px;
}
li.tab{
	list-style: none;
	background-color:#C4C8CD;
	background-repeat: no-repeat;
	background-position-y: 4px;
	background-position-x: 25px;
	background-size: 16px 16px;
	padding-top: 3px;
	padding-bottom: 3px;
	margin-left: 0px;
	display:block;
	position:relative;
}
li.tab.light{
	background-color: #FFFFFF;
}
li.tab > span.tabName{
	width:600px;
	padding-top: 2px;
	display:inline-block;
	color:#104B68;
	text-overflow: ellipsis;
	overflow-x: hidden;
	white-space: nowrap;
	padding-left:45px;
	padding-right: 23px;
	max-width: 100%;
	box-sizing: border-box;
	position: relative;
}

li.tab.light > span.tabName{
	color:#000;
}

li.tab:nth-child(odd){
	background-color:#D5D9DE;
}

li.tab.light:nth-child(odd){
	background-color: #E9E9E9;
}

li.tab:hover,li.tab.keyHover{
	background-color:#B3B3B3;
}
li.window>span.textContent{
	padding-top: 7px;
	padding-bottom: 7px;
	padding-left:11px;
	display:block;
	background-color: #778899;
	font-weight: bold;
	color:#E1E6F7;
}
li.window.light>span.textContent{
	background-color: #AABBDD;
	color: #F0F2F8;
}
li.window>span.textContent:hover,li.window.keyHover>span.textContent{
	background-color:#B3B3B3;
	color:#000;
}
.noselect {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	user-select: none;
}
.pointer{
	cursor: pointer;
}
i.close{
	position:absolute;
	top:1px;
	right:11px;
	font-size: 14px;
	color:#3F3F3F;
}
i.close:hover,i.close.fakeHover{
	color:#E53935
}
i.pin{
	position:absolute;
	top:2px;
	left:9px;
	font-size: 14px;
	color:#3F3F3F;
}
i.pin.pinned{
	color:#1565C0;
}
i.pin:hover,i.pin.fakeHover{
	color:#1565C0;
}
i.pin.pinned:hover,i.pin.pinned.fakeHover{
	color:#000;
}
input#search{
	font-family: FontAwesome;
	margin-top: 2px;
	margin-left: 3px;
	margin-right: 3px;
	height: 22px;
	width:calc(100% - 6px);
	box-sizing: border-box;
	line-height: normal;
}
span#noResults{
	display: block;
	text-align: center;
	margin-bottom:5px;
	font-size: 15px;
	visibility: none;
}

